tests/errors/ErrTypes2.yogur
var a: Int
var b: Bool

var c: Bool = a + b